# PX4_Programming

./: .gitmodules  README.md
src/fixed_control/: package.xml  setup.cfg  setup.py
src/fixedwing_control/: package.xml  setup.cfg  setup.py
src/fixedwing_control/config/: config.yaml
src/fixedwing_control/fixedwing_control/: fixedwing_control.py
src/fixedwing_control/launch/: offboard_control.launch.py
src/mavlink_control/: package.xml  setup.cfg  setup.py
src/mavlink_control/config/: config.yaml
src/mavlink_control/launch/: mavlink_control.launch.py
src/mavlink_control/mavlink_control/: mavlink_control.py
src/multicopter_control/: package.xml  setup.cfg  setup.py
src/multirotor_control/: .gitignore  package.xml  setup.cfg  setup.py
src/multirotor_control/config/: config.yaml
src/multirotor_control/launch/: offboard_control.launch.py
src/multirotor_control/multirotor_control/: geo_library_test.py  multirotor_control.py
src/offborad_control/: package.xml  setup.cfg  setup.py
src/practice_control/: package.xml  setup.cfg  setup.py
src/practice_control/practice_control/: fixedwing_takeoff_land.py  multirotor_flight_velocity.py  multirotor_takeoff_land.py
src/precision_landing/: package.xml  setup.py
src/px4_control_wgs84/: package.xml  setup.cfg  setup.py
src/px4_control_wgs84/config/: config.yaml
src/px4_control_wgs84/launch/: fixed_wing.launch.py  multicopter.launch.py  vtol.launch.py
src/px4_offboard_control/: package.xml  setup.py
src/utils/: image_augmentation.py
src/vtol_control/: package.xml  setup.cfg  setup.py
(+11 files in other folders)
